# proyecto_inmobiliario_sevilla

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requirements_dev.txt
.tmp_dagster_home_c3mgt7yc/history/: runs.db
.tmp_dagster_home_c3mgt7yc/history/runs/: .db  ce825705-5242-4102-850e-6241fd18724b.db  index.db
.tmp_dagster_home_c3mgt7yc/schedules/: schedules.db
.tmp_dagster_home_c3mgt7yc/storage/: datos_limpios  modelo_entrenado
.tmp_dagster_home_gostvge6/history/: runs.db
.tmp_dagster_home_gostvge6/history/runs/: .db  ec18b282-b06d-4582-b602-fedca9ba1640.db  index.db
.tmp_dagster_home_gostvge6/schedules/: schedules.db
data/processed/: viviendas_sevilla_limpio.csv
data/raw/: municipios_distancia_sevilla.csv  rentas_sevilla.csv
models/: diccionario_encoders.pkl  modelo_pytorch.pth  scaler_x.pkl  scaler_y.pkl
notebooks/: 01_exploracion_y_limpieza.ipynb  02_entrenamiento_modelo.ipynb
src/: tasador_pipeline.py
